<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_lobby_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_lobby_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_lobby_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_lobby_ip" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_lobby_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_lobby_port"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkBox_vsplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_vsplayer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_lobby_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_lobby_join" />

        <Button
            android:id="@+id/button_lobby_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_lobby_create" />

    </LinearLayout>

</LinearLayout>
